--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,62 @@
 {
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
   "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:prettier/recommended",
+    "plugin:import/recommended",
     "airbnb",
-    "airbnb/hooks",
-    "plugin:node/recommended",
-    "react-app",
-    "react-app/jest"
+    "prettier",
+    "plugin:react/jsx-runtime"
   ],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true,
+      "js": true
+    },
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["simple-import-sort", "prettier", "react", "react-hooks"],
   "rules": {
-    "prettier/prettier": "error",
-    "no-unused-vars": "warn",
-    "no-console": "off",
-    "func-names": "off",
-    "no-process-exit": "off",
-    "object-shorthand": "off",
-    "class-methods-use-this": "off"
+    "class-methods-use-this":"off",
+    "one-var":"off",
+    "no-restricted-globals":"off",
+    "prefer-template":"off",
+    "react/jsx-filename-extension": [0, { "allow": "as-needed" }],
+    "arrow-body-style": 0,
+    "react/no-array-index-key": 0,
+    "prefer-const": "off",
+    "import/prefer-default-export": "off",
+    "react/prop-types": "off",
+    "react/react-in-jsx-scope": "off",
+    "import/no-unresolved": "off",
+    "import/extensions": "off",
+    "react/jsx-no-constructed-context-values": "off",
+    "no-use-before-define": "off",
+    "max-classes-per-file": 0,
+    "no-restricted-syntax": "off",
+    "no-nested-ternary": "off",
+    "react/destructuring-assignment": "off",
+    "react/state-in-constructor": "off",
+    "react/forbid-prop-types": "off",
+    "consistent-return":"off",
+    "no-shadow":"off",
+    "no-else-return":"off",
+    "react/function-component-definition": "off",
+    "no-useless-escape": "off",
+    "sort-imports": "off",
+    "import/order": "off",
+    "default-param-last": "off",
+    "react/require-default-props": 0
   }
 }
