--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://saglushevich.github.io/calculator",
   "dependencies": {
     "@craco/craco": "^7.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "cypress": "^12.3.0",
+    "eslint": "^8.31.0",
     "eslint-config-airbnb": "19.0.4",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,7 +27,9 @@
     "build": "craco build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
@@ -39,11 +44,15 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.31.0",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "2.8.2"
+    "gh-pages": "^4.0.0",
+    "prettier": "^2.8.2"
   }
 }
