--- a/package.json
+++ b/package.json
@@ -33,8 +33,12 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "cypress:open": "cypress open",
-    "lint": "eslint src/**/*.js src/**/*.jsx",
     "lint:fix": "eslint src/**/*.js src/**/*.jsx --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint:fix && npx prettier --write ."
+    }
   },
   "browserslist": {
     "production": [
