--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "calculator",
   "version": "0.1.0",
+  "homepage": "https://alex-kavaliou.github.io/calculator",
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.0.0",
@@ -14,6 +15,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "gh-pages": "^5.0.0",
     "husky": "^8.0.3",
     "lint": "^0.8.19",
     "lint-staged": "^13.1.0",
@@ -34,7 +36,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "cypress:open": "cypress open",
-    "lint:fix": "eslint src/**/*.js src/**/*.jsx --fix"
+    "lint:fix": "eslint src/**/*.js src/**/*.jsx --fix",
+    "deploy": "gh-pages -d build"
   },
   "husky": {
     "hooks": {
